--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ description: >-
   [Ali Farhadi](https://homes.cs.washington.edu/~ali/) and
   [Steve Seitz](https://homes.cs.washington.edu/~seitz/).
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ntu-zjy.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ntu-zjy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: KeunhongP
 github_username: ntu-zjy
 google_scholar: Ds5rUV8AAAAJ
