--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -20,8 +20,8 @@
   description: "Introduces MPFT, a framework that fine-tunes a pre-trained model using multi-domain prototypes to address data heterogeneity in federated learning."
   project_page: https://openreview.net/forum?id=3wEGdrV5Cb
   arxiv: 2501.12345
-  image: mpft_overview.jpg
-  image_mouseover: mpft_process.mp4
+  # image: mpft_overview.jpg
+  # image_mouseover: mpft_process.mp4
   authors:
     - author1
     - author2
