--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,24 @@
+limweiyangBryan:
+  first_name: Wei Yang Bryan
+  last_name: Lim
+  website: https://sites.google.com/view/wyb
+zhangjingyuan:
+  first_name: Jingyuan
+  last_name: Zhang
+  website: https://ntu-zjy.com
+  is_me: true
+duanyiyang:
+  first_name: Yiyang
+  last_name: Duan
+  website: https://github.com/languangduan
+niushuaicheng:
+  first_name: Shuaicheng
+  last_name: Niu
+  website: https://niushuaicheng.cn/
+caoyang:
+  first_name: Yang
+  last_name: Cao
+  website: https://yangcao888.github.io/
 # keunhong:
 #   first_name: Keunhong
 #   last_name: Park
